--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,143 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#8E4A50</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#FFB4B8</color>
+    <color name="md_theme_onPrimaryContainer">#5E242A</color>
+    <color name="md_theme_secondary">#785557</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#FFD5D6</color>
+    <color name="md_theme_onSecondaryContainer">#5D3D3F</color>
+    <color name="md_theme_tertiary">#775A10</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#EAC370</color>
+    <color name="md_theme_onTertiaryContainer">#483400</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#410002</color>
+    <color name="md_theme_background">#FFF8F7</color>
+    <color name="md_theme_onBackground">#211A1A</color>
+    <color name="md_theme_surface">#FFF8F7</color>
+    <color name="md_theme_onSurface">#211A1A</color>
+    <color name="md_theme_surfaceVariant">#F5DDDD</color>
+    <color name="md_theme_onSurfaceVariant">#534343</color>
+    <color name="md_theme_outline">#857373</color>
+    <color name="md_theme_outlineVariant">#D8C1C1</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#362F2F</color>
+    <color name="md_theme_inverseOnSurface">#FCEEED</color>
+    <color name="md_theme_inversePrimary">#FFB2B6</color>
+    <color name="md_theme_primaryFixed">#FFDADB</color>
+    <color name="md_theme_onPrimaryFixed">#3A0810</color>
+    <color name="md_theme_primaryFixedDim">#FFB2B6</color>
+    <color name="md_theme_onPrimaryFixedVariant">#713339</color>
+    <color name="md_theme_secondaryFixed">#FFDADB</color>
+    <color name="md_theme_onSecondaryFixed">#2D1416</color>
+    <color name="md_theme_secondaryFixedDim">#E8BCBD</color>
+    <color name="md_theme_onSecondaryFixedVariant">#5E3E40</color>
+    <color name="md_theme_tertiaryFixed">#FFDF9E</color>
+    <color name="md_theme_onTertiaryFixed">#261A00</color>
+    <color name="md_theme_tertiaryFixedDim">#E8C26F</color>
+    <color name="md_theme_onTertiaryFixedVariant">#5B4300</color>
+    <color name="md_theme_surfaceDim">#E4D7D7</color>
+    <color name="md_theme_surfaceBright">#FFF8F7</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#FFF0F0</color>
+    <color name="md_theme_surfaceContainer">#F9EBEA</color>
+    <color name="md_theme_surfaceContainerHigh">#F3E5E5</color>
+    <color name="md_theme_surfaceContainerHighest">#EDDFDF</color>
+    <color name="md_theme_primary_mediumContrast">#6C3035</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#A86065</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#5A3A3C</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#906B6D</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#563F00</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#8F7026</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#8C0009</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#DA342E</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FFF8F7</color>
+    <color name="md_theme_onBackground_mediumContrast">#211A1A</color>
+    <color name="md_theme_surface_mediumContrast">#FFF8F7</color>
+    <color name="md_theme_onSurface_mediumContrast">#211A1A</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#F5DDDD</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#4F3F3F</color>
+    <color name="md_theme_outline_mediumContrast">#6C5B5B</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#897677</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#362F2F</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#FCEEED</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#FFB2B6</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#A86065</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#8B484D</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#906B6D</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#765355</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#8F7026</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#74580D</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#E4D7D7</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FFF8F7</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#FFF0F0</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#F9EBEA</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#F3E5E5</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#EDDFDF</color>
+    <color name="md_theme_primary_highContrast">#430F17</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#6C3035</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#351B1C</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#5A3A3C</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#2E2000</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#563F00</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#4E0002</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#8C0009</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FFF8F7</color>
+    <color name="md_theme_onBackground_highContrast">#211A1A</color>
+    <color name="md_theme_surface_highContrast">#FFF8F7</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#F5DDDD</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#2E2121</color>
+    <color name="md_theme_outline_highContrast">#4F3F3F</color>
+    <color name="md_theme_outlineVariant_highContrast">#4F3F3F</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#362F2F</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#FFE6E7</color>
+    <color name="md_theme_primaryFixed_highContrast">#6C3035</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#511A20</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#5A3A3C</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#412527</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#563F00</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#3B2A00</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#E4D7D7</color>
+    <color name="md_theme_surfaceBright_highContrast">#FFF8F7</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#FFF0F0</color>
+    <color name="md_theme_surfaceContainer_highContrast">#F9EBEA</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#F3E5E5</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#EDDFDF</color>
 </resources>
