--- a/app/src/main/res/layout/fragment_onboarding_slide.xml
+++ b/app/src/main/res/layout/fragment_onboarding_slide.xml
@@ -22,14 +22,15 @@
         android:id="@+id/animationView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/tvSlideDescription"
+        android:layout_marginTop="32dp"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSlideTitle"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_repeatMode="reverse"
-        app:lottie_rawRes="@raw/auth_animation" />
+        app:lottie_rawRes="@raw/auth_animation"
+        app:lottie_repeatMode="reverse" />
 
     <TextView
         android:id="@+id/tvSlideDescription"
@@ -40,9 +41,10 @@
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/open_sans"
         android:lineSpacingExtra="4sp"
-        tools:text="Easily log in to access your personalized art gallery experience. Save your progress, view your favorites, and pick up where you left off across all your devices.  "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/animationView"
+        tools:text="Easily log in to access your personalized art gallery experience. Save your progress, view your favorites, and pick up where you left off across all your devices.  " />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
