--- a/app/src/main/res/layout/fragment_post_details.xml
+++ b/app/src/main/res/layout/fragment_post_details.xml
@@ -24,6 +24,17 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/ivPostImageBlur"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@tools:sample/avatars" />
+
+            <ImageView
                 android:id="@+id/ivPostImage"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -153,17 +164,30 @@
 
     </androidx.core.widget.NestedScrollView>
 
+    <View
+        android:id="@+id/vLoadingBg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="?attr/colorSurface"
+        android:elevation="9dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ProgressBar
         android:id="@+id/pbDetailsLoading"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="9dp"
-        android:visibility="gone"
+        android:visibility="invisible"
+        app:hideAnimationBehavior="outward"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:showAnimationBehavior="outward"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
