implemented search feature

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -34,7 +34,9 @@
             android:id="@+id/tieSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/search_for_anything" />
+            android:hint="@string/search_for_anything"
+            android:imeOptions="actionSearch"
+            android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -42,6 +44,7 @@
         android:id="@+id/rvSearchResults"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:paddingTop="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -62,6 +65,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/rvSearchResults"
+        app:layout_constraintEnd_toEndOf="@id/rvSearchResults"
+        app:layout_constraintStart_toStartOf="@id/rvSearchResults"
+        app:layout_constraintTop_toTopOf="@id/rvSearchResults"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
